# SCENT_jaxqtl

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml
benchmark/: README.md  compare_results.py  generate_benchmark_data.py  run_benchmark.sh  run_pyscent.py  run_scent_jaxqtl.py  run_scent_r.R
benchmark/data/small/: atac_matrix.csv  atac_matrix_sparse.npz  cell_names.txt  gene_names.txt  metadata.csv  peak_info.csv  peak_names.txt  rna_matrix.csv  rna_matrix_sparse.npz  true_associations.csv
benchmark/results/comparison/: comparison_stats.json
benchmark/results/pyscent/: benchmark_stats.csv  benchmark_stats.json  pyscent_small_T_cell.csv
benchmark/results/scent_jaxqtl/: benchmark_stats.csv  benchmark_stats.json  scent_jaxqtl_small_T_cell.csv
benchmark/results/scent_r/: benchmark_stats.csv  benchmark_stats.json  scent_r_small_T_cell.csv
src/: __init__.py
src/SCENT_jaxqtl/: bootstrap.py  core.py  io.py  utils.py
src/pyscent/: __init__.py  bootstrap.py  core.py  io.py
