[project]
name = "pyscent"
version = "0.1.0"
description = "SCENT reimplemented in Python with JAX-powered acceleration"
requires-python = ">=3.10"
dependencies = [
    "jaxqtl",
    "lineax>=0.0.8",
    "qtl>=0.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
jaxqtl = { path = "jaxqtl", editable = true }
